# cockpit-council

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
cockpit/: __init__.py  cli.py
cockpit/agents/: art.py  base.py  biz.py  cfo.py  legal.py  security.py  tech.py
cockpit/artifacts/: parser.py  store.py  types.py
cockpit/council/: events.py  graph.py  state.py  synthesis.py
cockpit/db/: engine.py  migrations.py  models.py
cockpit/memory/: base.py  store.py
cockpit/prompts/: art.py  biz.py  cfo.py  chairman.py  legal.py  security.py  tech.py
cockpit/providers/: anthropic.py  base.py  claude_code.py  fallback.py  ollama.py  openai.py
examples/: basic_council.py  custom_agent.py  fastapi_integration.py  paperclip_adapter.py  streaming.py  with_memory.py
tests/: conftest.py  test_agents.py  test_agents_extended.py  test_artifacts.py  test_artifacts_extended.py  test_claude_code_provider.py  test_cli.py  test_council.py  test_council_extended.py  test_memory.py  test_providers.py
